--- a/templates/admin/blog/historique.html.twig
+++ b/templates/admin/blog/historique.html.twig
@@ -25,7 +25,7 @@
                                 <thead>
                                 <th>Action</th>
                                 <th>Date</th>
-                                <th>{{ "backend.menu.user"|trans }}</th>
+                                <th>Usuario</th>
                                 <th>Undo</th>
                                 <th>Ancienne version</th>
                                 </thead>
