--- a/templates/admin/user/userform.html.twig
+++ b/templates/admin/user/userform.html.twig
@@ -16,8 +16,8 @@
                         <div class="ln_solid"></div>
                         <div class="item form-group">
                             <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-                                <a class="btn btn-warning" href="{{ path('app_admin_users') }}">{{ "backend.user.cancel"|trans }}</a>
-                                <button type="submit" name="valider" class="btn btn-success">{{ "backend.user.register"|trans }}</button>
+                                <a class="btn btn-warning" href="{{ path('app_admin_users') }}">Cancelar</a>
+                                <button type="submit" name="valider" class="btn btn-success">Guardar</button>
                             </div>
                         </div>
                         {{ form_end(userForm) }}
