--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>{% block title %}{{ "backend.global.welcome"|trans }}{% endblock %}</title>
+        <title>{% block title %}Inicio{% endblock %} | TSJ</title>
         {% block metas %}
             <meta charset="UTF-8">
         {% endblock %}
@@ -13,8 +13,8 @@
         {% block impersionate %}
             {% if is_granted('IS_IMPERSONATOR') %}
             <div class="alert alert-warning" style="margin-bottom: 0;">
-                {{ "backend.global.you_are_logged"|trans }} : {{ app.user.username }}
-                <a href="{{ path('app_admin_index',{'_switch_user':'_exit'}) }}">{{ "backend.global.leave_impersonate"|trans }}</a>
+                Loguado como: {{ app.user.username }}
+                <a href="{{ path('app_admin_index',{'_switch_user':'_exit'}) }}">Dejando la suplantación</a>
             </div>
             {% endif %}
         {% endblock %}
