--- a/templates/admin/params/changeMdpForm.html.twig
+++ b/templates/admin/params/changeMdpForm.html.twig
@@ -4,7 +4,7 @@
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>Cambiar contraseña</h3>
+                <h3 style="color: black">Cambiar contraseña</h3>
             </div>
         </div>
 
