--- a/templates/admin/bars.html.twig
+++ b/templates/admin/bars.html.twig
@@ -45,6 +45,11 @@
                                     </a>
                                 </li>
                                 <li>
+                                    <a href="{{ path('index_roles') }}">
+                                        <i class="fa fa-list-alt"></i>Roles
+                                    </a>
+                                </li>
+                                <li>
                                     <a href="{{ path('index_reparticion') }}">
                                         <i class="fa fa-bookmark"></i>Reparticiones
                                     </a>
