--- a/templates/admin/roles/show.html.twig
+++ b/templates/admin/roles/show.html.twig
@@ -8,68 +8,200 @@
       <div class="x_panel">
         <div class="x_title">
             <h2 class="title-page">Rol: {{ rol.roleName }}</h2>            
-            <a class="btn btn-primary btn-sm float-right" style="margin-right:15px;" href="{{ path('index_roles') }}">
+            <a class="btn btn-primary btn-sm float-end" style="margin-right:15px;" href="{{ path('index_roles') }}">
               <i class="fa fa-mail-reply"></i> &nbsp; Volver al listado
             </a>
-            <a class="btn btn-primary btn-sm float-right" href="{{ path('edit_role',{"id":rol.id}) }}">
+            <a class="btn btn-primary btn-sm float-end" href="{{ path('edit_role',{"id":rol.id}) }}">
               <i class="fa fa-edit"></i> &nbsp; Editar
             </a>
             <div class="clearfix"></div>
         </div>
         <div class="x_content">
           <div class="row">
-            <div class="table-responsive">
-              <div class="row text-left" style="margin:0 0 20px 0;">               
-                <div class="col-md ml-md-auto text-md-right">                          
-                  <div class="row text-left">
-                    <table class="table">
-                      <tbody>                        
-                        <tr>
-                          {# PERMISOS DE ADMINISTRACIÓN #}
-                          <th>
-                            <div class="x_panel">
-                              <a class="collapse-link">
-                              <div class="x_title">
-                                  <h2>Permisos de Administración</h2>
-                                  <ul class="nav navbar-right panel_toolbox">
-                                    <li><i class="fa fa-chevron-up"></i></li>
-                                  </ul>
-                                <div class="clearfix"></div>
-                              </div>
-                              </a> 
-                              <div class="x_content">
-                                <div class="form-check form-switch">
-  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-  <label class="form-check-label" for="flexSwitchCheckDefault">Default switch checkbox input</label>
-</div>
-                              </div>
-                            </div>
-                          </th>
-                          {# PERMISOS DE ADMINISTRACIÓN #}
-                          <th>
-                            <div class="x_panel">
-                              <a class="collapse-link">
-                              <div class="x_title">
-                                  <h2>Permisos de Administración</h2>
-                                  <ul class="nav navbar-right panel_toolbox">
-                                    <li><i class="fa fa-chevron-up"></i></li>
-                                  </ul>
-                                <div class="clearfix"></div>
-                              </div>
-                              </a> 
-                              <div class="x_content">
-                                <p>texto</p>
-                              </div>
-                            </div>
-                          </th>
-                        </tr>
-                      </tbody>
-                    </table>   
+            <form method="post" action="{{ path('new_permiso', {'id': rol.id})}}" style="display: flex;">
+              <input type="hidden" name="_method" value="POST">
+              <input type="hidden" name="_token" value="{{ csrf_token('guardarRoles' ~ app.user.id) }}">
+              
+              {# Permisos Generales #}
+              <div class="col-4">                      
+                <div class="x_panel">
+                  <a class="collapse-link">
+                    <div class="x_title">
+                        <h2>Permisos Generales</h2>
+                        <ul class="nav navbar-right panel_toolbox">
+                          <li><i class="fa fa-chevron-up"></i></li>
+                        </ul>
+                      <div class="clearfix"></div>
+                    </div>
+                  </a>
+                  <div class="x_content">
+                    <div class="form-check form-switch">
+                      <input class="form-check-input" name="ADMINISTRACION" type="checkbox" id="flexSwitchCheckDefault">
+                      <label class="form-check-label" for="flexSwitchCheckDefault">Acceder a la administración</label>
+                    </div>                    
+                  </div>
+                </div>                      
+              </div>
+              {# Fin Permisos Generales #}
+
+              {# Permisos de Administración #}
+              <div class="col-4">
+                <div class="x_panel">
+                  <a class="collapse-link">
+                    <div class="x_title">
+                        <h2>Permisos de Administración</h2>
+                        <ul class="nav navbar-right panel_toolbox">
+                          <li><i class="fa fa-chevron-up"></i></li>
+                        </ul>
+                      <div class="clearfix"></div>
+                    </div>
+                  </a>
+                  <div class="x_content">
+                    {# Permisos de Usuarios #}
+                    <div class="x_panel">
+                      <a class="collapse-link">
+                        <div class="x_title">
+                            <h2>Permisos de Usuarios</h2>                            
+                            <ul class="nav navbar-right panel_toolbox">
+                              <li><i class="fa fa-chevron-up"></i></li>
+                            </ul>
+                          <div class="clearfix"></div>
+                        </div>
+                      </a>
+                      <div class="x_content">
+                        <div class="form-check form-switch">
+                          <input class="form-check-input" name="USERS_CREAR" type="checkbox" id="flexSwitchCheckDefault">
+                          <label class="form-check-label" for="flexSwitchCheckDefault">Crear</label>
+                        </div>
+                        <div class="form-check form-switch">
+                          <input class="form-check-input" name="USERS_VER" type="checkbox" id="flexSwitchCheckDefault">
+                          <label class="form-check-label" for="flexSwitchCheckDefault">Ver</label>
+                        </div>
+                        <div class="form-check form-switch">
+                          <input class="form-check-input" name="USERS_EDITAR" type="checkbox" id="flexSwitchCheckDefault">
+                          <label class="form-check-label" for="flexSwitchCheckDefault">Editar</label>
+                        </div>
+                        <div class="form-check form-switch">
+                          <input class="form-check-input" name="USERS_ELIMINAR" type="checkbox" id="flexSwitchCheckDefault">
+                          <label class="form-check-label" for="flexSwitchCheckDefault">Eliminar</label>
+                        </div>
+                        <div class="form-check form-switch">
+                          <input class="form-check-input" name="USERS_ACTIVAR" type="checkbox" id="flexSwitchCheckDefault">
+                          <label class="form-check-label" for="flexSwitchCheckDefault">Activar/Desactivar Cuentas</label>
+                        </div>
+                        <div class="form-check form-switch">
+                          <input class="form-check-input" name="USERS_PASSWORD" type="checkbox" id="flexSwitchCheckDefault">
+                          <label class="form-check-label" for="flexSwitchCheckDefault">Cambiar Contraseñas</label>
+                        </div>
+                      </div>
+                    </div>
+                    {# Fin Usuarios #}
+                    {# Permisos de Roles #}
+                    <div class="x_panel">
+                      <a class="collapse-link">
+                        <div class="x_title">
+                            <h2>Permisos de Roles</h2>
+                            <ul class="nav navbar-right panel_toolbox">
+                              <li><i class="fa fa-chevron-up"></i></li>
+                            </ul>
+                          <div class="clearfix"></div>
+                        </div>
+                      </a>
+                      <div class="x_content">
+                        <div class="form-check form-switch">
+                          <input class="form-check-input" name="ROLES_CREAR" type="checkbox" id="flexSwitchCheckDefault">
+                          <label class="form-check-label" for="flexSwitchCheckDefault">Crear</label>
+                        </div>
+                        <div class="form-check form-switch">
+                          <input class="form-check-input" name="ROLES_VER" type="checkbox" id="flexSwitchCheckDefault">
+                          <label class="form-check-label" for="flexSwitchCheckDefault">Ver</label>
+                        </div>
+                        <div class="form-check form-switch">
+                          <input class="form-check-input" name="ROLES_EDITAR" type="checkbox" id="flexSwitchCheckDefault">
+                          <label class="form-check-label" for="flexSwitchCheckDefault">Editar</label>
+                        </div>
+                        <div class="form-check form-switch">
+                          <input class="form-check-input" name="ROLES_ELIMINAR" type="checkbox" id="flexSwitchCheckDefault">
+                          <label class="form-check-label" for="flexSwitchCheckDefault">Eliminar</label>
+                        </div>                                
+                      </div>
+                    </div>
+                    {# Fin Roles #}
+                    {# Permisos de Reparticiones #}
+                    <div class="x_panel">
+                      <a class="collapse-link">
+                        <div class="x_title">
+                            <h2>Permisos de Reparticiones</h2>
+                            <ul class="nav navbar-right panel_toolbox">
+                              <li><i class="fa fa-chevron-up"></i></li>
+                            </ul>
+                          <div class="clearfix"></div>
+                        </div>
+                      </a>
+                      <div class="x_content">
+                        <div class="form-check form-switch">
+                          <input class="form-check-input" name="REPARTICION_CREAR" type="checkbox" id="flexSwitchCheckDefault">
+                          <label class="form-check-label" for="flexSwitchCheckDefault">Crear</label>
+                        </div>
+                        <div class="form-check form-switch">
+                          <input class="form-check-input" name="REPARTICION_VER" type="checkbox" id="flexSwitchCheckDefault">
+                          <label class="form-check-label" for="flexSwitchCheckDefault">Ver</label>
+                        </div>
+                        <div class="form-check form-switch">
+                          <input class="form-check-input" name="REPARTICION_EDITAR" type="checkbox" id="flexSwitchCheckDefault">
+                          <label class="form-check-label" for="flexSwitchCheckDefault">Editar</label>
+                        </div>
+                        <div class="form-check form-switch">
+                          <input class="form-check-input" name="REPARTICION_ELIMINAR" type="checkbox" id="flexSwitchCheckDefault">
+                          <label class="form-check-label" for="flexSwitchCheckDefault">Eliminar</label>
+                        </div>                                
+                      </div>
+                    </div>
+                    {# Fin Reparticiones #}
                   </div>
                 </div>
-              </div>    
+              </div>
+              {# FIN Permisos de Administración #}
+
+              {# Permisos de Ejemplo #}
+              <div class="col-4">
+                <div class="x_panel">
+                  <a class="collapse-link">
+                    <div class="x_title">
+                        <h2>Permisos de Ejemplo</h2>
+                        <ul class="nav navbar-right panel_toolbox">
+                          <li><i class="fa fa-chevron-up"></i></li>
+                        </ul>
+                      <div class="clearfix"></div>
+                    </div>
+                  </a>
+                  <div class="x_content">
+                    <div class="form-check form-switch">
+                      <input class="form-check-input" name="EJEMPLO2_CREAR" type="checkbox" id="flexSwitchCheckDefault">
+                      <label class="form-check-label" for="flexSwitchCheckDefault">Permiso ejemplo 1</label>
+                    </div>
+                    <div class="form-check form-switch">
+                      <input class="form-check-input" name="EJEMPLO2_VER" type="checkbox" id="flexSwitchCheckDefault">
+                      <label class="form-check-label" for="flexSwitchCheckDefault">Permiso ejemplo 2</label>
+                    </div>
+                    <div class="form-check form-switch">
+                      <input class="form-check-input" name="EJEMPLO2_EDITAR" type="checkbox" id="flexSwitchCheckDefault">
+                      <label class="form-check-label" for="flexSwitchCheckDefault">Permiso ejemplo 3</label>
+                    </div>
+                    <div class="form-check form-switch">
+                      <input class="form-check-input" name="EJEMPLO2_ELIMINAR" type="checkbox" id="flexSwitchCheckDefault">
+                      <label class="form-check-label" for="flexSwitchCheckDefault">Permiso ejemplo 4</label>
+                    </div>                                
+                  </div>
+                </div>                  
+              </div>
+              {# Fin Ejemplo #}
             </div>
-          </div>
+            <button class="btn btn-success float-right" type="submit" >
+              Guardar
+            </button>
+          </form>
+          
         </div>
       </div>
     </div>
