--- a/templates/admin/roles/index.html.twig
+++ b/templates/admin/roles/index.html.twig
@@ -22,7 +22,7 @@
                     <div class="x_content">
                         <div class="row">
                             <div class="table-responsive">
-                                <table id="example" class="display table table-striped table-bordered" >
+                                <table id="example" class="display table table-hover" >
                                     {# Títulos de tabla #}
                                     <thead>
                                         <th scope="col" class="font-weight-semi-bold py-2" style="cursor: auto;" width="100px">
